<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.michellegoldman.truthortale.RulesActivity"
    tools:showIn="@layout/activity_rules">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:foregroundGravity="bottom"
        android:nestedScrollingEnabled="true"
        android:scrollIndicators="right"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:src="@drawable/truth_or_tale_logo3"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/rules_header_textView"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/rules_play_header"
                android:textSize="26sp"
                android:textColor="#3464f4"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/rules_button_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/rules_button_play"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:lineSpacingExtra="@dimen/activity_vertical_margin"
                android:layout_gravity="left"
                android:singleLine="false" />

            <ImageView
                android:id="@+id/playButton"
                android:src="@drawable/button_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/rules_button_truth_textView"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/rules_button_truth"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:lineSpacingExtra="@dimen/activity_vertical_margin"
                android:layout_gravity="left"
                android:singleLine="false" />

            <ImageView
                android:id="@+id/truthButton"
                android:src="@drawable/button_truth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/rules_button_tale_textView"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/rules_button_tale"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:lineSpacingExtra="@dimen/activity_vertical_margin"
                android:layout_gravity="left"
                android:singleLine="false" />

            <ImageView
                android:id="@+id/taleButton"
                android:src="@drawable/button_tale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/advancing_header_textView"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/rules_advancing_header"
                android:textSize="26sp"
                android:textColor="#3464f4"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/advancing_timer_textView"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/rules_advancing_timer"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:lineSpacingExtra="@dimen/activity_vertical_margin"
                android:layout_gravity="left"
                android:singleLine="false" />

            <ImageView
                android:id="@+id/timer"
                android:src="@drawable/timer_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/advancing_content_textView"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/rules_advancing_content"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:lineSpacingExtra="@dimen/activity_vertical_margin"
                android:layout_gravity="left"
                android:singleLine="false" />

            <ImageView
                android:id="@+id/level"
                android:src="@drawable/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
