<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.michellegoldman.truthortale.AboutActivity"
    tools:showIn="@layout/activity_about">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:scrollIndicators="right">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:background="#000000"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:src="@drawable/truth_or_tale_logo3"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/about_content_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/about_content"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:lineSpacingExtra="@dimen/activity_vertical_margin"
                android:layout_gravity="left"
                android:singleLine="false" />

            <TextView
                android:id="@+id/about_content_version_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/about_content_version"
                android:textSize="14sp"
                android:textColor="#3464f4"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/about_content_copyright_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:textSize="12sp"
                android:text="@string/about_content_copyright"
                android:textColor="#3464f4"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:foregroundGravity="center_horizontal" />

        </LinearLayout>



    </ScrollView>


</RelativeLayout>
