<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#000000"
    android:weightSum="4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.michellegoldman.truthortale.QuizActivity"
    tools:showIn="@layout/activity_quiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".05"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/correct_answers_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/number_correct_answers_label"
            android:textSize="18sp"
            android:textColor="#cc8e11"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/correct_answers_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/number_correct_answers"
            android:textSize="18sp"
            android:textColor="#cc8e11"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/level_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="130dp"
            android:paddingRight="10dp"
            android:text="@string/level"
            android:textSize="18sp"
            android:textColor="#349118"
            android:textStyle="bold"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/timerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight=".05">


        <TextView
            android:id="@+id/answer_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageView"
            android:textColor="#cc8e11"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timer_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/timer"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageView"
            android:background="#8f0505"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="bold"
            android:inputType="time" />

  <!--      <ImageView
            android:id="@+id/timer"
            android:src="@drawable/timer_small"
            android:layout_width="100dp"
            android:layout_height="80dp"/> -->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/questionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight="3.9"
        android:background="@drawable/truth_or_tale_background_sm">

        <TextView
            android:id="@+id/category_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#151414"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/question_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_gravity="left"
            android:singleLine="false"
            android:textColor="#000000" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_weight=".5"
        android:layout_marginTop="10dp"
        android:background="#000000">

        <ImageButton
            android:id="@+id/truthButton"
            android:src="@drawable/button_truth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/taleButton"
            android:src="@drawable/button_tale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bannerLayout"
        android:gravity="center_horizontal"
        android:layout_weight=".5"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/testBanner"
            android:src="@drawable/test_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
